# Thesseus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  package-lock.json  package.json  start-containter.sh  webpack.config.js
cmake/: CompileShaders.cmake
docker/: Dockerfile  compose.yml
lib/: CMakeLists.txt
res/shaders/: colored_triangle_mesh_fs.frag  input_structures.glsl  main.fs  main.vs  mesh.frag  mesh.vert  tex_image.frag
src/: camera.cpp  camera.h  context.cpp  context.h  loop.cpp  loop.h  main.cpp  main.ts  model.hpp  model.tpp  shader.cpp  shader.h  texture.cpp  texture.h  utils.ts  vao.hpp  vao.tpp
src/camera/: camera.cpp  camera.h
src/core/: core.h  destructor-queue.h  enum.h  function-name.h  gl_cast.cpp  gl_cast.hpp  include.h  inline.hpp  logger.h  logger.hpp  result.hpp  status.h  types.h
src/core/io/: io.gltf.cpp  io.h  io.image.cpp  io.text.cpp
src/debug/: debug.h
src/engine/: engine.cpp  engine.h  types.h  vkimage.cpp  vkimage.h  vkinit.cpp  vkinit.h
src/engine/shader/: shader.h  shader.inl
src/engine/texture/: texture.h
src/engine/vao/: vao.cpp  vao.h
src/event/: event.h  handler.cpp  loop.cpp
src/mgmt/: include.h  mgmt.cpp  mgmt.h
src/mgmt/vulkan/: include.h  manager.cpp  manager.h
src/mgmt/vulkan-mgr/: vulkan-manager.cpp  vulkan-manager.h
src/mgmt/vulkan-mgr/descriptors/: allocator.cpp  descriptors.h  layout-builder.cpp
src/mgmt/vulkan-mgr/image/: copy_image.cpp  image.h  transition_image.cpp
src/mgmt/vulkan-mgr/info/: command_buffer_allocate_info.cpp  command_buffer_begin_info.cpp  command_buffer_submit_info.cpp  command_pool_create_info.cpp  fence_create_info.cpp  image_create_info.cpp  image_subresource_range.cpp  imageview_create_info.cpp  info.h  rendering_attachment_info.cpp  rendering_info.cpp  semaphore_create_info.cpp  semaphore_submit_info.cpp  submit_info.cpp
src/mgmt/vulkan-mgr/manager/: constructor.cpp  create-descriptor-pool.cpp  create-immediate-submit.cpp  create-pipeline.cpp  create-swapchain.cpp  destructor.cpp  getters.cpp  manager.h  swapchain_begin_commands.cpp  swapchain_end_commands.cpp
src/mgmt/vulkan-mgr/pipeline/: load_shader_module.cpp  pipeline.h
src/mgmt/vulkan-mgr/swapchain/: get_current_frame.cpp  swapchain.h
src/mgmt/vulkan/buffer/: buffer.h
src/mgmt/vulkan/descriptors/: allocator.cpp  descriptors.h  layout-builder.cpp  writer.cpp
src/mgmt/vulkan/image/: copy_image.cpp  image.cpp  image.h  transition_image.cpp
src/mgmt/vulkan/info/: command_buffer_allocate_info.cpp  command_buffer_begin_info.cpp  command_buffer_submit_info.cpp  command_pool_create_info.cpp  fence_create_info.cpp  image_create_info.cpp  image_subresource_range.cpp  imageview_create_info.cpp  info.cpp  info.h  rendering_attachment_info.cpp  rendering_info.cpp  semaphore_create_info.cpp  semaphore_submit_info.cpp  submit_info.cpp
src/mgmt/vulkan/manager/: buffer.cpp  constructor.cpp  create-descriptor-pool.cpp  create-pipeline.cpp  create-swapchain.cpp  descriptors.cpp  destructor.cpp  getters.cpp  image.cpp  imm-submit.cpp  manager.cpp  manager.h  pipeline.cpp  swapchain.cpp  swapchain_begin_commands.cpp  swapchain_end_commands.cpp
src/mgmt/vulkan/material/: material.h
src/mgmt/vulkan/mesh/: mesh.h
src/mgmt/vulkan/pipeline/: builder.cpp  load_shader_module.cpp  pipeline.h
src/mgmt/vulkan/swapchain/: get_current_frame.cpp  swapchain.cpp  swapchain.h
src/mgmt/window/: include.h  manager.cpp  manager.h
src/mgmt/window-mgr/: build_surface.cpp  constructor.cpp  destructor.cpp  get_required_extensions.cpp  getters.cpp  window-manager.h
src/model/: basic.h  cube.cpp  model.hpp  model.tpp  raw.cpp  raw.h  raw.inl  reformatter.cpp  reformatter.h  reformatter.inl  reformatter.test.cpp  texture.h  vao.cpp  vao.h
src/model/collection/: collection.h
src/model/collection/cube/: builder.cpp  cube.cpp  cube.h  raw.h
src/model/cube/: decl.h  impl.cpp
src/raw/: raw.cpp  raw.h
src/raw/reformatter/: reformatter.cpp  reformatter.h
src/raw/reformatter/tests/: cast_different_size.test.cpp  cast_equal_size.test.cpp  cast_larger_len.test.cpp  cast_normalize.test.cpp  cast_smaller_len.test.cpp  reformatter.test.cpp  remove.test.cpp  shuffle.test.cpp  shuffle_remove.test.cpp
src/render/: include.h  render.cpp  render.h
src/render-engine/: render-engine.cpp  render-engine.h
src/render-engine/engine/: constructor.cpp  destructor.cpp  engine.h  render.cpp
src/render-engine/renderer/: renderer.h
src/render-engine/renderer/imgui-renderer/: constructor.cpp  destructor.cpp  draw.cpp  imgui-renderer.h  renderer-imgui-draw.cpp  renderer-imgui-init.cpp  renderer-imgui.h
src/render-engine/renderer/swap-renderer/: constructor.cpp  destructor.cpp  draw.cpp  renderer-swap-draw.cpp  renderer-swap-init.cpp  renderer-swap.h  swap-renderer.h
src/render-engine/vk-mgr/: vulkan-manager.h
src/render-engine/vk-mgr/descriptors/: allocator.cpp  descriptors.h  layout-builder.cpp
src/render-engine/vk-mgr/image/: copy_image.cpp  image.h  transition_image.cpp
src/render-engine/vk-mgr/imm-sumbit/: immediate-submit.h
src/render-engine/vk-mgr/info/: command_buffer_allocate_info.cpp  command_buffer_begin_info.cpp  command_buffer_submit_info.cpp  command_pool_create_info.cpp  fence_create_info.cpp  image_create_info.cpp  info.h  submit_info.cpp  (+6 more)
src/render-engine/window-mgr/: build_surface.cpp  constructor.cpp  destructor.cpp  get_required_extensions.cpp  window-manager.h
src/render/base/: base.cpp  base.h
src/render/engine/: constructor.cpp  destructor.cpp  engine.cpp  engine.h  render.cpp
src/render/object/: object.h
src/render/renderer/: include.h  renderer.cpp  renderer.h
src/scene/: scene.h
src/scene/collection/: cube_party.scene.cpp  simple_lighting.scene.cpp  two_cubes.scene.cpp
src/shader/: shader.cpp  shader.h  shader.inl
src/shader/collection/: collection.h
src/shader/default-3d/: decl.h  impl.cpp
src/shaders/: gradient.comp  shader.cpp  shader.h
src/shaders/default-3d/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
src/vao/: vao.cpp  vao.h
(+93 files in other folders)
